@@ -58,14 +58,26 @@ public abstract class AbstractOptionPane extends JPanel implements OptionPane
 		return this;
 	}
 
-	/**
-	 * Called when the options dialog's "ok" button is clicked.
-	 * This should save any properties being edited in this option
-	 * pane.
-	 */
-	public void save() {}
+	public void init()
+	{
+		if(!initialized)
+		{
+			initialized = true;
+			_init();
+		}
+	}
+
+	public void save()
+	{
+		if(initialized)
+			_save();
+	}
 
 	// protected members
+	/**
+	 * Has the option pane been initialized?
+	 */
+	protected boolean initialized;
 
 	/**
 	 * The layout manager.
@@ -76,6 +88,18 @@ public abstract class AbstractOptionPane extends JPanel implements OptionPane
 	 * The number of components already added to the layout manager.
 	 */
 	protected int y;
+
+	/**
+	 * This method should create the option pane's GUI.
+	 */
+	protected void _init() {}
+
+	/**
+	 * Called when the options dialog's "ok" button is clicked.
+	 * This should save any properties being edited in this option
+	 * pane.
+	 */
+	protected void _save() {}
 
 	/**
 	 * Adds a labeled component to the option pane. Components are
@@ -130,6 +154,9 @@ public abstract class AbstractOptionPane extends JPanel implements OptionPane
 /*
  * ChangeLog:
  * $Log$
+ * Revision 1.4  2000/04/16 08:56:24  sp
+ * Option pane updates
+ *
  * Revision 1.3  1999/11/21 01:20:30  sp
  * Bug fixes, EditBus updates, fixed some warnings generated by jikes +P
  *
