@@ -46,6 +46,11 @@ public interface OptionPane
 	Component getComponent();
 
 	/**
+	 * This method should create the option pane's GUI.
+	 */
+	void init();
+
+	/**
 	 * Called when the options dialog's "ok" button is clicked.
 	 * This should save any properties being edited in this option
 	 * pane.
@@ -56,6 +61,9 @@ public interface OptionPane
 /*
  * ChangeLog:
  * $Log$
+ * Revision 1.6  2000/04/16 08:56:24  sp
+ * Option pane updates
+ *
  * Revision 1.5  1999/11/21 01:20:30  sp
  * Bug fixes, EditBus updates, fixed some warnings generated by jikes +P
  *
